chart-k8s/ollama/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: kekibook.uk
spec:
  rules:
    - host: kekibook.uk
      http:
        paths:
          - path: /ollama
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  name: http
